<resources>
    <string-array name="categories_array">
        <item>Tailor</item>
        <item>Weaver</item>
        <item>Fashionista</item>
    </string-array>
    <string-array name="drawer_menu_titles">
        <item>Clients</item>
        <item>Resources</item>
        <item>Subscriptions</item>
        <item>Logout</item>
    </string-array>
    <string-array name="specialty_list">
        <item>Yoruba attires</item>
        <item>Hausa attires</item>
        <item>Igbo attires</item>
        <item>South-south attires</item>
        <item>Senator</item>
        <item>Kaftans</item>
        <item>African fashion</item>
        <item>Western fashion</item>
        <item>School uniform</item>
        <item>Caps</item>
        <item>Military and para-military Uniform</item>
    </string-array>
    <string-array name="payment_terms_list">
        <item>100% Deposit</item>
        <item>50% Deposit and 50% balance on delivery</item>
        <item>0% Deposit and 100% balance on delivery</item>
    </string-array>
    <string-array name="payment_options_list">
        <item>Bank Deposit(Naira)</item>
        <item>Bank Deposit(USD, GBP, EUR)</item>
        <item>Cash</item>
        <item>VCash</item>
        <item>Payoneer</item>
    </string-array>
    <string-array name="gender_list">
        <item>male</item>
        <item>female</item>
        <item>kids</item>
        <item>unisex</item>
    </string-array>
    <string-array name="gender_normal_list">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="name_list">
        <item>first Name</item>
        <item>last Name</item>
        <item>other Name</item>
        <item>gender</item>
    </string-array>
    <string-array name="measurement_options_list">
        <item>Visit us for your measurement</item>
        <item>Will accept self-measurement</item>
    </string-array>
    <string-array name="measurement_values_list">
        <item>ankle</item>
        <item>backWidth</item>
        <item>bottom</item>
        <item>cap</item>
        <item>fullLength</item>
        <item>highLength</item>
        <item>lap</item>
        <item>neckWidth</item>
        <item>roundSleeve</item>
        <item>armpit</item>
        <item>band</item>
        <item>chest</item>
        <item>halfLength</item>
        <item>hip</item>
        <item>longSleeve</item>
        <item>shortSleeve</item>
        <item>thigh</item>
        <item>shoulderToWaist</item>
        <item>dart</item>
        <item>handFit</item>
        <item>knee</item>
        <item>napeToWaist</item>
        <item>roundBody</item>
        <item>shoulder</item>
        <item>waist</item>
    </string-array>
    <string name="app_name">Uyoyo</string>
    <string name="client_id_two">206708835261-e33o8a24rv51sufb2l1lsu6rsmk12hg8.apps.googleusercontent.com</string>
    <string name="client_id">962135252978-8mcotdb8jec29alk20v8lcne67fm5gib.apps.googleusercontent.com</string>
    <string name="client_secret">txJLbANrqH96IwuI_pPSFc79</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="lets_get_to_know_you">Let\'s get to know you</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="other_name">Other Name</string>
    <string name="choose_category">Choose category</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="wlecome_back">Welcome back</string>
    <string name="login_tocontinue">Login to continue</string>
    <string name="new_user">New user? Sign up for free</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="resources">Resources</string>
    <string name="clients">Clients</string>
    <string name="subscription">Subscriptions</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi </string>
    <string name="enter_six_digit">Enter 6-digit code sent to your phone</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Resend code</string>
    <string name="have_an_account">Have an account? Log in</string>
    <string name="bad_network">Bad network connection</string>
    <string name="server_error">Server error</string>
    <string name="field_required">Field is required</string>
    <string name="signup_successful">Registered successfully</string>
    <string name="home">Home</string>
    <string name="media">Media</string>
    <string name="messages">Messages</string>
    <string name="password_standard">password field should contain at least 8 characters, at least 1 lowercase, 1 uppercase and 1 number and a special character.</string>
    <string name="tap_to_change_picture">tap to change picture</string>
    <string name="gender">Gender</string>
    <string name="workshop_address">Workshop Address</string>
    <string name="showroom_address">Showroom Address</string>
    <string name="no_of_emplyee">No of Employees/Apprentices</string>
    <string name="legal_status">Legal Status</string>
    <string name="union_membership">UNION MEMBERSHIP</string>
    <string name="name_of_union">Name Of Union</string>
    <string name="ward">Ward</string>
    <string name="lga">Local Government Area</string>
    <string name="state">State</string>
    <string name="save_changes">Save changes</string>
    <string name="session_expired">Session has expired</string>
    <string name="gender_focus">Gender Focus</string>
    <string name="quality_asurance_str">Quality Assurance</string>
    <string name="obioma_trained_str">Obioma trained and certified</string>
    <string name="yes_no_str">Yes</string>
    <string name="measurement_option_str">Measurement  Options</string>
    <string name="delivery_lead_time_str">Delivery lead time</string>
    <string name="time_placeholder">10mins</string>
    <string name="choose_a_user_category_str">Choose a user category to begin</string>
    <string name="signup_with_email_str">Sign up with email</string>
    <string name="signup_with_phone_str">Sign up with phone number</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="email_address_str">Email address</string>
    <string name="select_your_country_str">Select your country</string>
    <string name="unauthorized_user">You are not authorized</string>
    <string name="check_email">Check your mail for confirmation</string>
    <string name="forgot_password_str">Forgot password</string>
    <string name="send">Send</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="reset_password_str">Reset password</string>
    <string name="cpassword">Confirm password</string>
    <string name="email_confirmation_str">Email confirmation</string>
    <string name="email_confirmation_advice_str">Your email has been verified successfully</string>
    <string name="email_address_or_phone_str">Email or Phone No</string>
    <string name="you_have_not_added_str">You have not added client yet</string>
    <string name="name">Name</string>
    <string name="shipping_addresss_str">Shipping address</string>
    <string name="next">Next</string>
    <string name="add_client">Add client</string>
    <string name="save">Save</string>
    <string name="value">Value</string>
    <string name="limit_update">44/77</string>
    <string name="add">Add</string>
    <string name="text_count">--/--</string>
    <string name="add_measurement">Add measurement</string>
    <string name="photo_gallery_str">Photo Gallery</string>
    <string name="upload_photo">Upload photo</string>
    <string name="photo_uploading_str">Photo uploading</string>
    <string name="you_have_no_photo_str">You have no photo in your gallery</string>
    <string name="delete">Delete</string>
    <string name="allow_camera">Allow camera permission</string>
    <string name="camera_str">Camera</string>
    <string name="ok_str">Allow</string>
    <string name="permission_granted_str">Camera permission is already granted</string>
    <string name="goto_setting">Go to setting</string>
    <string name="permission_not_granted_str">Permission is not granted</string>
    <string name="email_or_phone_et">email or phone et</string>
    <string name="password_et">password et</string>
    <string name="spinner">spinner</string>
    <string name="login_with_email">Login with email address</string>
    <string name="login_with_phone">Login with phone number</string>
    <string name="resources_str">Resources</string>
    <string name="videos_str">Videos</string>
    <string name="hour_min_str">1 hour 30 mins</string>
    <string name="view_all_str">View all</string>
    <string name="article_publication_str">Article/Publications</string>
    <string name="by_author_str">By Nathan Maro</string>
    <string name="sample_video_str">https://test-videos.co.uk/vids/bigbuckbunny/mp4/h264/1080/Big_Buck_Bunny_1080_10s_1MB.mp4</string>
    <string name="sample_str">How to perfectly sew adire</string>
    <string name="sample_min_str">1 hour 30 mins</string>
    <string name="sample_image_str">https://guardian.ng/wp-content/uploads/2020/03/FASHION.jpg</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="provider_authority_str">com.peacedude.lassod_tailor_app.fileprovider</string>
    <string name="no_permission">Permission: You do not have permission</string>
    <string name="edit_str">Edit</string>
    <string name="country_str">Country</string>
    <string name="stay_in_touch_str">Stay in touch</string>
    <string name="email_sent_by_str">email sent by Obioma</string>
    <string name="copy_right_str">Copy right 2020. All Rights Reserved</string>
    <string name="subscription_str">Subscription</string>
    <string name="exp_date_str">Expiry Date</string>
    <string name="you_have_no_sub">You have no subscription</string>
    <string name="add_card">Add card</string>
    <string name="pay_str">Pay NGN10000</string>
    <string name="card_details_instruction_str">Enter your card details to pay \nfor subscription</string>
    <string name="card_number_str">Card Number</string>
    <string name="card_month_str">MM/YY</string>
    <string name="card_cvv_str">CVV</string>
    <string name="secure_by_paystack_str">Secure by Paystack</string>
    <string name="pay">Pay</string>
    <string name="successful_str">Successful</string>
    <string name="you_are_signed">You are signed in as</string>
    <string name="ok">Ok</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="city">City</string>
    <string name="street_str">Street</string>
    <string name="no_str">No</string>
    <string name="yes_str">Yes</string>
    <string name="visit_us_for_measurement_str">Visit us for your measurement</string>
    <string name="accept_self_measurement_str">Will accept self-measurement</string>
    <string name="delivery_time_period_str">Delivery time period</string>
    <string name="delivery_time_no_str">Delivery time no</string>
    <string name="delivery_address_str">Delivery address</string>
    <string name="update_str">Update</string>
    <string name="remember_login_choice">Remember me</string>
    <string name="select_str">Select</string>
    <string name="edit_measurement_str">Edit measurement</string>
    <string name="elegant_str">Elegant suit for men</string>
    <string name="check_ur_connection">Check your connection</string>
</resources>