<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    -->
    <TextView
        android:id="@+id/card_details_customer_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"

        android:textSize="@dimen/_13sdp"
        />

    <TextView
        android:id="@+id/card_details_amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pay_str"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/card_details_customer_name_tv"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/_13sdp"
        />

    <TextView
        android:id="@+id/card_details_instruction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/card_details_instruction_str"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/card_details_amount_tv"
        android:textSize="@dimen/_13sdp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_details_card_number_text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:imeOptions="actionNext"
        android:textColorHint="@color/colorGray"
        app:hintTextColor="@color/colorGray"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_instruction_tv"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_details_card_number_et"
            android:textColor="@color/colorPrimary"
            style="@style/EditTextCustomStyle"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="19"
            android:hint="@string/card_number_str"
            android:tag="@string/card_number_str"
            android:textColorHint="@color/colorGray"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/card_details_expiry_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/exp_date_str"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/card_details_card_number_text_input"
        android:textSize="@dimen/_10sdp"

        />
    <EditText
        android:id="@+id/card_details_card_month_et"
        style="@style/EditTextCustomStyle"
        android:layout_width="0dp"
        android:singleLine="true"
        android:inputType="text"
        android:maxLines="5"
        android:hint="@string/card_month_str"
        app:layout_constraintTop_toBottomOf="@id/card_details_expiry_date_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_details_card_cvv_et"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/card_details_card_cvv_et"
        style="@style/EditTextCustomStyle"
        android:layout_width="0dp"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/card_cvv_str"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/card_details_expiry_date_tv"
        app:layout_constraintStart_toEndOf="@id/card_details_card_month_et"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <include
        android:id="@+id/card_details_include_btn"
        layout="@layout/button_and_progressbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_card_cvv_et"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/card_details_secure_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/secure_by_paystack_str"
        android:layout_marginTop="@dimen/_30sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        app:layout_constraintTop_toBottomOf="@id/card_details_include_btn"
        android:textSize="@dimen/_10sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>