<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/first_name_tv"
        style="@style/EditProfileTextViewCustomStyle"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multipurpose_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="@dimen/_30sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/first_name_tv"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/multipurpose_name_dialog_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorGray"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/dash"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/multipurpose_name_dialog_et"
                android:textColor="@color/colorGray"
                style="@style/EditTextCustomStyle"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:tag="@string/email_address_str"
                android:textColorHint="@color/colorGray"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/multipurpose_name_dialog_text_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_count"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/multipurpose_name_dialog_input"
            />

        <TextView
            android:id="@+id/multipurpose_name_dialog_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/multipurpose_name_dialog_text_count_tv"
            />
        <TextView
            android:id="@+id/multipurpose_name_dialog_ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@id/multipurpose_name_dialog_text_count_tv"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multipurpose_gender_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/first_name_tv"
        >
        <RadioButton
            android:id="@+id/multipurpose_gender_dialog_female_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/multipurpose_gender_dialog_male_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/multipurpose_gender_dialog_female_rbtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/male"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>