<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".ui.PhoneSignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/phone_signup_appbar"
            layout="@layout/appbar" />

        <TextView
            android:id="@+id/phone_signup_create_acct_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_appbar" />

        <TextView
            android:id="@+id/phone_signup_lets_get_to_know_you_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_get_to_know_you"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_create_acct_tv"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"/>


        <com.hbb20.CountryCodePicker
            android:id="@+id/phone_signup_ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_lets_get_to_know_you_tv"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:ccp_arrowColor="@color/colorGray"
            app:ccp_contentColor="@color/colorGray"
            app:ccp_textGravity="LEFT"
            app:ccp_autoDetectCountry="true"
            app:ccp_textSize="@dimen/_12sdp"
            android:backgroundTint="@color/colorGray"
            android:background="@drawable/rounded_underline_white"

            />

        <Spinner

            android:id="@+id/phone_signup_country_spinner"
            style="@style/SpinnerCustomStyle"
            android:layout_marginTop="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_lets_get_to_know_you_tv"
            android:visibility="gone"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_signup_phone_number_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorGray"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/phone_signup_ccp"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_signup_phone_number_et"
                android:textColor="@color/colorGray"
                style="@style/EditTextCustomStyle"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:textColorHint="@color/colorGray"

                android:transitionName="@string/email_or_phone_et"
                android:maxLength="11"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_signup_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorGray"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_phone_number_text_input"
            app:passwordToggleEnabled="true"

            app:passwordToggleTint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_signup_password_et"
                android:textColor="@color/colorGray"
                style="@style/EditTextCustomStyle"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/colorGray"
                android:transitionName="@string/password_et"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/phone_signup_password_standard_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_standard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_password_text_input"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <Spinner
            android:id="@+id/phone_signup_category_spinner"
            style="@style/SpinnerCustomStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_password_standard_tv"
            android:layout_marginTop="@dimen/_20sdp"
            android:transitionName="@string/spinner"

            />


        <include
            android:id="@+id/phone_signup_btn"
            layout="@layout/button_and_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_category_spinner" />

        <TextView
            android:id="@+id/phone_signup_login_tv"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/phone_signup_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>