<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/reset_password_appbar"
            layout="@layout/appbar" />

        <TextView
            android:id="@+id/reset_password_create_acct_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/reset_password_str"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_password_appbar" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/reset_password_create_acct_tv"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_password_et"
                style="@style/EditTextCustomStyle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorGray"
                android:textColorHint="@color/colorGray"


                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_confirm_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/reset_password_text_input"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_conf_password_et"
                style="@style/EditTextCustomStyle"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:textColor="@color/colorGray"
                android:textColorHint="@color/colorGray"


                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reset_password_standard_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/password_standard"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_password_confirm_password_text_input" />


        <include
            android:id="@+id/reset_password_btn"
            layout="@layout/button_and_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/reset_password_standard_tv" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>